--- a/Front/LaSalle/src/app/Pages/formulario/formulario.component.html
+++ b/Front/LaSalle/src/app/Pages/formulario/formulario.component.html
@@ -1,5 +1,7 @@
 <h1> Registro de inscripcion </h1>
 
+
+
 <div *ngIf="manejoErrores">
     <p> {{ manejoErrores }}</p>
 </div>
@@ -8,19 +10,19 @@
     <form (ngSubmit)="guardar( f )" #f="ngForm">
         <div>
             <label> Matricula: </label>
-            <input type="text" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
+            <input type="text" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" minlength="9" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
         </div>
         <div>
             <label> Nombre(s): </label>
-            <input type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre" required>
+            <input type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre">
         </div>
         <div>
             <label> Apellido Paterno: </label>
-            <input type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno" required>
+            <input type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno">
         </div>
         <div>
             <label> Apellido Materno: </label>
-            <input type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno" required>
+            <input type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno">
         </div>
         <div>
             <label> Correo: </label>
@@ -65,13 +67,87 @@
         <br>
 
         <div>
-            <button type="submit ">
+            <button type="submit" [disabled]="f.invalid">
                 Registarse
             </button>
         </div>
     </form>
 
+    <h1 class="center"> Registro de inscripcion </h1>
+    <div materialize class="row">
+        <div class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="matricula" type="text" class="validate" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" minlength="9" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
+                    <label for='matricula'> Matricula: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="nombre" type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre">
+                    <label for="nombre">Nombre: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="paterno" type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno">
+                    <label for="paterno"> Apellido Paterno: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="materno" type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno">
+                    <label for="materno"> Apellido Materno: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <div class="input-field col s12">
+                        <input id="email_inline" type="email" class="validate" placeholder="E-Mail" [(ngModel)]="formulario.correo" name="correo" required>
+                        <label for="email_inline">Email</label>
+                        <span class="helper-text" data-error="El correo es erróneo" data-success="El correo electrónico es correcto"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row input-field col s12">
+                <select class="browser-default" name="combo" [(ngModel)]="formulario.semestre" (change)="verificarSemestre($event.target.value)" required>
+                    <option *ngFor="let semestre of semestre" [value]="semestre.id">
+                        {{semestre.semestre}}
+                    </option>
+                </select>
+            </div>
+            <div class="row">
+                <div>
+                    <div class="input-field col s6">
+                        <select name="singleSelect" [(ngModel)]="formulario.semestre" name="selectedOption" materialize="material_select" [disabled]="isDisabled?true:null">
+                          <option value="" disabled selected>Choose your option</option>
+                          <option *ngFor="let semestre of semestre" [value]="semestre.id">{{semestre.semestre}}</option>
+                        </select>
+                        <label>Materialize Select</label>
+                    </div>
+                </div>
+            </div>
+
+            <select class="browser-default">
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
+        </div>
 
 
-
-</div>
+        <div materialize class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
