--- a/Front/LaSalle/src/app/Pages/formulario/formulario.component.html
+++ b/Front/LaSalle/src/app/Pages/formulario/formulario.component.html
@@ -1,153 +1,88 @@
-<h1> Registro de inscripcion </h1>
 
-
-
-<div *ngIf="manejoErrores">
-    <p> {{ manejoErrores }}</p>
-</div>
-
-<div>
-    <form (ngSubmit)="guardar( f )" #f="ngForm">
-        <div>
-            <label> Matricula: </label>
-            <input type="text" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" minlength="9" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
-        </div>
-        <div>
-            <label> Nombre(s): </label>
-            <input type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre">
-        </div>
-        <div>
-            <label> Apellido Paterno: </label>
-            <input type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno">
-        </div>
-        <div>
-            <label> Apellido Materno: </label>
-            <input type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno">
-        </div>
-        <div>
-            <label> Correo: </label>
-            <input type="email" placeholder="E-Mail" [(ngModel)]="formulario.correo" name="correo" required>
-        </div>
-
-        <div>
-            <p>Semestre: </p>
-            <select name="combo" [(ngModel)]="formulario.semestre" (change)="verificarSemestre($event.target.value)" required>
-                <option *ngFor="let semestre of semestre" [value]="semestre.id">
-                    {{semestre.semestre}}
-                </option>
-            </select>
-        </div>
-
-
-
-        <div>
-            <p>Grado: </p>
-            <select name="combo" [(ngModel)]="formulario.grado" (change)="cambiarGradoAcademico($event.target.value)" required>
-                <option *ngFor="let grado of gradoAcademico;" [value]="grado.id" > 
-                    {{grado.nombreGrado}} 
-                </option>
-            </select>
-        </div>
-
-
-
-        <div>
-            <p>Especialidad: </p>
-            <select name="combo" [(ngModel)]="formulario.especialidad" required>
-                <option *ngFor="let especialidad of especialidad;" [value]="especialidad.id"  > {{especialidad.nombre}} </option>
-            </select>
-        </div>
-
-        <div *ngIf="usuario2">
-            <p>hola soy </p>
-            <div>
-                <h2> {{ usuario2.matricula }}</h2>
+<div class="container">
+    <div class="row" >
+        <h1 class="center"> REGISTRO DE INSCRIPCIÓN </h1>
+        <br>
+        <div class="center" >
+            <div class="chip" *ngIf="manejoErroresGeneral">
+                <i class="red-text"> {{ manejoErroresGeneral }} </i>
             </div>
         </div>
         <br>
-
-        <div>
-            <button type="submit" [disabled]="f.invalid">
-                Registarse
-            </button>
-        </div>
-    </form>
-
-    <h1 class="center"> Registro de inscripcion </h1>
-    <div materialize class="row">
-        <div class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="matricula" type="text" class="validate" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" minlength="9" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
-                    <label for='matricula'> Matricula: </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="nombre" type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre">
-                    <label for="nombre">Nombre: </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="paterno" type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno">
-                    <label for="paterno"> Apellido Paterno: </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="materno" type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno">
-                    <label for="materno"> Apellido Materno: </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="input-field col s12">
-                        <input id="email_inline" type="email" class="validate" placeholder="E-Mail" [(ngModel)]="formulario.correo" name="correo" required>
-                        <label for="email_inline">Email</label>
-                        <span class="helper-text" data-error="El correo es erróneo" data-success="El correo electrónico es correcto"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row input-field col s12">
-                <select class="browser-default" name="combo" [(ngModel)]="formulario.semestre" (change)="verificarSemestre($event.target.value)" required>
-                    <option *ngFor="let semestre of semestre" [value]="semestre.id">
-                        {{semestre.semestre}}
-                    </option>
-                </select>
-            </div>
-            <div class="row">
-                <div>
-                    <div class="input-field col s6">
-                        <select name="singleSelect" [(ngModel)]="formulario.semestre" name="selectedOption" materialize="material_select" [disabled]="isDisabled?true:null">
-                          <option value="" disabled selected>Choose your option</option>
-                          <option *ngFor="let semestre of semestre" [value]="semestre.id">{{semestre.semestre}}</option>
-                        </select>
-                        <label>Materialize Select</label>
-                    </div>
-                </div>
-            </div>
-
-            <select class="browser-default">
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-              </select>
-        </div>
-
-
-        <div materialize class="row">
-            <form class="col s12">
+        <form #f="ngForm" (ngSubmit)="guardar(f)">
+            <div class="col s12">
                 <div class="row">
-                    <div class="input-field col s6">
-                        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
+                    <div class="input-field col s12">
+                        <input id="matricula" type="text" class="validate" maxlength="9" placeholder="Matricula (9 dígitos)" [(ngModel)]="formulario.idAlumnoMatricula" minlength="9" name="idAlumnoMatricula" (change)="validarCuenta($event.target.value)" required>
+                        <label for='matricula'> Matricula: </label>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
+                    <div class="center" >
+                        <div class="chip" *ngIf="manejoErroresUsuario">
+                            <i id="validacionUsuario" class="red-text"> {{ manejoErroresUsuario }} </i>
+                        </div>
                     </div>
                 </div>
-            </form>
-        </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="nombre" type="text" placeholder="Nombre(s)" [(ngModel)]="formulario.nombre" name="nombre">
+                        <label for="nombre">Nombre: </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="paterno" type="text" placeholder="Apellido Paterno" [(ngModel)]="formulario.paterno" name="paterno">
+                        <label for="paterno"> Apellido Paterno: </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="materno" type="text" placeholder="Apellido Materno" [(ngModel)]="formulario.materno" name="materno">
+                        <label for="materno"> Apellido Materno: </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate" placeholder="E-Mail" [(ngModel)]="formulario.correo" name="correo" required>
+                            <label for="email" data-error="El correo es erróneo" data-success="El correo electrónico es correcto">Correo Electrónico</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row input-field col s12" >
+                    <select class="browser-default"  name="semestre" [(ngModel)]="formulario.semestre" (change)="verificarSemestre($event.target.value)" required>
+                        <option *ngFor="let semestre of semestre" [value]="semestre.id">
+                            {{semestre.semestre}}
+                        </option>
+                    </select>
+                    <label>Semestre:  </label>
+                    <div class="center" >
+                        <div  class="chip" *ngIf="manejoErroresSemestre" >
+                            <i id="validacionSemestre" class="red-text"> {{ manejoErroresSemestre }} </i>
+                        </div>
+                    </div>
+                </div>
+                <div class="row input-field col s12">
+                    <select class="browser-default"  name="grado" [(ngModel)]="formulario.grado" (change)="cambiarGradoAcademico($event.target.value)" required>
+                        <option *ngFor="let grado of gradoAcademico;" [value]="grado.id" > 
+                            {{grado.nombreGrado}} 
+                        </option>
+                    </select>
+                    <label>Grado Academico: </label>
+                </div>
+                <div class="row input-field col s12">
+                    <select id="especialidad" class="browser-default" name="especialidad" [(ngModel)]="formulario.especialidad" required>
+                        <option value="0" disabled selected>Elige una especialidad</option>
+                        <option *ngFor="let especialidad of especialidad;" [value]="especialidad.id"  > {{especialidad.nombre}} </option>
+                    </select>
+                    <label>Especialidad : </label>
+                </div>
+                <div class="submit-button">
+                    <button class="btn validate" type="submit" name="registarte" [disabled]="f.invalid">Registrarte
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
+<div>
+
